--- a/infoville.css
+++ b/infoville.css
@@ -1,52 +1,56 @@
+::before,
+::after,
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;  
-    background: #27383d!important;
+  font-family: 'Open Sans', sans-serif;
+  background: linear-gradient(90deg, #dbdfe4 0%, #99b1b1 50%, #45889d 100%);
 }
 
 
 
 .jumbotron img {
-    display: block;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(2, 2, 3, 1.5);
-    justify-content: center;
-    margin-top: 5px;
-  }
-   
-
-  .container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  iframe {
-    width: 100%;
-    border: none;
-
-    bottom: 0;
-    margin-bottom: 10px;
-  }
-
-  main{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 15px;
-   
-    background: linear-gradient(90deg, #eeeff0 0%, #99b1b1 50%, #122d35 100%);
-  }
+  display: block;
+  margin: 0 auto;
+  box-shadow: 0 0 10px rgba(2, 2, 3, 1.5);
+  justify-content: center;
+  margin-top: 5px;
+}
 
 
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.iframe {
+  width: 40%;
+  display: inline-block;
+  justify-content: space-around;
+  margin-top: 50px;
+
+
+}
+
+.nano {
+  width: 40%;
+  margin-top: 50px;
+}
