--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,23 +1,31 @@
+::before, ::after * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
 html, body {
     height: 100%;
   }
   body {
     background-color: #f0f0f0;
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: center;
   }
   
   
   $primary: #00acc1;
-  
+
   .map-container {
     padding: 3.2rem .8rem;
     position: relative;
     display: inline-block;
+    justify-content: center;
     img {
       width: 100%;
     }
+
+
     .point {
       cursor: pointer;
       position: absolute;
@@ -56,3 +64,80 @@ html, body {
     70% { box-shadow: 0 0 0 25px rgba($primary, 0); }
     100% { box-shadow: 0 0 0 0 rgba($primary, 0); }
   }
+
+  
+  #animations-example-6 {
+    height: 200px;
+    max-width: 350px;
+    margin: 0 auto;
+  }
+  
+  #animations-example-6 td {
+    background-image: linear-gradient(
+      45deg,
+      #956fd3,
+      #e76ec2,
+      #ff7fa2,
+      #ffa782,
+      #ffd86f,
+      #faf982
+    );
+    background-size: 600%;
+    animation: gradient-animation 3s linear infinite alternate;
+  }
+  @keyframes gradient-animation {
+    0%   { background-position:   0%; }
+    100% { background-position: 100%; }
+  }
+  
+.navbar{
+  width: 80%;
+}
+
+#animations-example-4 {
+  height: 200px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+#animations-example-4 tbody td {
+  transform-origin: bottom;
+  animation: revealing-bars 4s linear infinite;
+}
+@keyframes revealing-bars {
+  0%  { transform: scaleY( 0 ); }
+  15% { transform: scaleY( 1 ); }
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+
+table{
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #000;
+  margin: 0 auto;
+}
+
+#animations-example-1 {
+  height: 200px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+#animations-example-1 td {
+  animation: jumping-bars 3s linear infinite;
+  animation-delay: 0;
+}
+#animations-example-1 tr:nth-of-type(even) td {
+  animation-delay: 300ms;
+}
+@keyframes jumping-bars {
+  0% { transform: translateY(   0px ); }
+  2% { transform: translateY( -10px ); }
+  4% { transform: translateY(   0px ); }
+}
