--- a/scss/style.css
+++ b/scss/style.css
@@ -1,15 +1,17 @@
-::before, ::after * {
+::before,
+::after * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
-  background-color: #f0f0f0;
+  background: linear-gradient(to bottom, #ffffff, #f4f0e6, #f1e0b2, #e9deb9, #ffe49b);
   display: block;
   align-items: center;
   justify-content: center;
@@ -20,10 +22,13 @@ body {
   position: relative;
   display: inline-block;
   justify-content: center;
+  width: 80%;
 }
+
 .map-container img {
   width: 100%;
 }
+
 .map-container .point {
   cursor: pointer;
   position: absolute;
@@ -37,59 +42,73 @@ body {
   box-shadow: 0 0 0 rgba(0, 172, 193, 0.4);
   animation: pulse 3s infinite;
 }
+
 .map-container .point:hover {
   animation: none;
   transform: translate(-50%, -50%) scale3D(1.35, 1.35, 1);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+
 .map-container .venezuela {
   top: 54%;
   left: 24%;
 }
+
 .map-container .brasil {
   top: 64%;
   left: 28%;
 }
+
 .map-container .argentina {
   top: 77%;
   left: 27%;
 }
+
 .map-container .colombia {
   top: 55%;
   left: 21%;
 }
+
 .map-container .panama {
   top: 51%;
   left: 18%;
 }
+
 .map-container .mexico {
   top: 38%;
   left: 12%;
 }
+
 .map-container .usa {
   top: 26%;
   left: 17%;
 }
+
 .map-container .arabia {
   top: 40%;
   left: 53%;
 }
+
 .map-container .turquia {
   top: 31%;
   left: 57%;
 }
+
 .map-container .rusia {
   top: 16%;
   left: 67%;
 }
+
 .map-container .china {
   top: 40%;
   left: 72%;
 }
+
 .map-container .japon {
   top: 34%;
   left: 86%;
 }
+
 .map-container .australia {
   top: 72%;
   left: 86%;
@@ -99,13 +118,16 @@ body {
   0% {
     box-shadow: 0 0 0 0 rgba(0, 172, 193, 0.5);
   }
+
   70% {
     box-shadow: 0 0 0 25px rgba(0, 172, 193, 0);
   }
+
   100% {
     box-shadow: 0 0 0 0 rgba(0, 172, 193, 0);
   }
 }
+
 #animations-example-6 {
   height: 200px;
   max-width: 350px;
@@ -122,13 +144,13 @@ body {
   0% {
     background-position: 0%;
   }
+
   100% {
     background-position: 100%;
   }
 }
-.navbar {
-  width: 80%;
-}
+
+
 
 #animations-example-4 {
   height: 200px;
@@ -145,10 +167,12 @@ body {
   0% {
     transform: scaleY(0);
   }
+
   15% {
     transform: scaleY(1);
   }
 }
+
 main {
   display: flex;
   flex-direction: row;
@@ -184,10 +208,76 @@ table {
   0% {
     transform: translateY(0px);
   }
+
   2% {
     transform: translateY(-10px);
   }
+
   4% {
     transform: translateY(0px);
   }
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
+
+span {
+  overflow: hidden;
+  display: inline-block;
+  white-space: nowrap;
+  vertical-align: bottom;
+  position: relative;
+  z-index: 1;
+}
+
+span::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: #6ab8e2;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  z-index: -1;
+  transition: all 0.7s;
+  animation: animateTextBackground 2s infinite alternate;
+}
+
+@keyframes animateTextBackground {
+  0% {
+    transform: skewX(20deg) translateX(0);
+  }
+
+  100% {
+    transform: skewX(20deg) translateX(600%);
+  }
+}
+
+section {
+  padding: 80px 0;
+}
+
+section h2 {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+section p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+section ul {
+  list-style-type: none;
+  font-size: 1.1rem;
+  line-height: 1.5;
+}
+
+section img {
+  margin-bottom: 30px;
+}
+
+footer {
+  background-color: #f6f6f6;
+  padding: 20px 0;
+  text-align: center;
+}
