--- a/css/all.css
+++ b/css/all.css
@@ -1,110 +1,245 @@
-::before, ::after *{
-  box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+#animatePhoto {
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease-in-out;
+}
+
+#animatePhoto:hover {
+  cursor: pointer;
+  transform: rotate(10deg) scale(1.1);
+}
+
+#animatePhoto:active {
+  transform: rotate(-10deg) scale(0.9);
+}
+
+#back-to-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
+
+#back-to-top-btn img {
+  width: 90px;
+}
+
+@media (min-height: 500px) {
+  body {
+    position: relative;
+  }
+
+  #back-to-top-btn {
+    display: block;
+  }
+
+  #back-to-top-btn:hover {
+    text-decoration: none;
+  }
+
+  #back-to-top-btn:active {
+    top: 1px;
+  }
+
+  #back-to-top-btn:focus {
+    outline: none;
+  }
+}
+
+/* Barre de défilement verticale */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #da4747, #f9f9f9, #da4747);
+  border-radius: 10px;
+}
+
+/* Barre de défilement horizontale */
+::-webkit-scrollbar-horizontal {
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  background: linear-gradient(#2341e9, #ffffff, #ffffff);
+  border-radius: 10px;
 }
 
 
-body {
-position: relative;
-    font-family: 'Open Sans', sans-serif;
-    background: linear-gradient(90deg, #dbdfe4 0%, #99b1b1 50%, #45889d 100%);
+
+section {
+  padding: 60px 0;
+  min-height: 100vh;
 }
 
-#section1 {padding-top:50px;height:300px;color:linear-gradient(90deg, #dbdfe4 0%, #99b1b1 50%, #45889d 100%);}
-#section2 {padding-top:50px;height:300px;color:linear-gradient(90deg, #dbdfe4 0%, #99b1b1 50%, #45889d 100%);}
-#section3 {padding-top:50px;height:300px;color:linear-gradient(90deg, #dbdfe4 0%, #759c9c 50%, #2b7991 100%);}
-#section41 {padding-top:50px;height:300px;color:linear-gradient(90deg, #dbdfe4 0%, #7fadad 50%, #45889d 100%);}
-#section42 {padding-top:50px;height:300px;color: #fff; background-color: #009688;}
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  outline: none;
+}
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
+.main-footer {
+  position: relative;
+  background: #1e2129;
+}
 
-.jumbotron img {
-    display: block;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(2, 2, 3, 1.5);
-    justify-content: center;
-    margin-top: 165px;
-  }
+.footer-content {
+  position: relative;
+  padding: 85px 0px 80px 0px;
+}
 
-  
-  .navbar {
-    background-color: #fff;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-    opacity: 0.9;
-  }
+.footer-content:before {
+  position: absolute;
+  content: '';
+  background: url(https://i.ibb.co/jyRLrBZ/world-map.png);
+  width: 744px;
+  height: 365px;
+  top: 50px;
+  right: 0px;
+  background-size: cover;
+}
 
-  .container {
-    margin-top: 20px;
-  }
+.footer-content .logo-widget {
+  position: relative;
+  margin-top: -5px;
+}
 
-  h1{
-    font-size: 30px;
-    color: #111010;
-    text-align: center;
-    margin-bottom: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 15px;
-  }
+.footer-content .logo-widget .footer-social li {
+  position: relative;
+  display: inline-block;
+  margin-right: 9px;
+}
 
+.footer-content .logo-widget .footer-social li:last-child {
+  margin-right: 0px;
+}
 
-  #japanese-cuisine {
-    background-color: #f9f9f9;
-    padding: 50px;
-  }
+.footer-content .logo-widget .footer-social li a {
+  position: relative;
+  display: inline-block;
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  background: #2e3138;
+  color: #9ea0a9;
+  text-align: center;
+  border-radius: 50%;
+}
 
-  .resto {
-    max-width: 960px;
-    margin: 0 auto;
-  }
+.footer-content .logo-widget .footer-social li a:hover {
+  color: #ffffff;
+  background: #ff5e14;
+}
 
-   h2 {
-    text-align: center;
-    font-size: 36px;
-    color: #333;
-    margin-bottom: 30px;
-  }
+.footer-content .logo-widget .logo-box {
+  margin-bottom: 25px;
+}
 
-   p {
-    font-size: 18px;
-    line-height: 1.5;
-    color: #666;
-    margin-bottom: 20px;
-  }
+.footer-content .logo-widget .text p {
+  color: #9ea0a9;
+  margin-bottom: 32px;
+}
 
-  .menu-group {
-    margin-bottom: 40px;
-  }
+.footer-content .footer-title {
+  position: relative;
+  font-size: 24px;
+  line-height: 35px;
+  font-family: 'Playfair Display', serif;
+  color: #ffffff;
+  font-weight: 700;
+  margin-bottom: 27px;
+}
 
-  h3 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 10px;
-  }
+.footer-content .service-widget .list li {
+  display: block;
+  margin-bottom: 12px;
+}
 
+.footer-content .service-widget .list li a {
+  position: relative;
+  display: inline-block;
+  color: #9ea0a9;
+}
 
-  #japan{
-    width: 300px;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: block;
+.footer-content .service-widget .list li a:hover {
+  color: #ff5e14;
+}
 
-  }
+.footer-content .contact-widget p {
+  color: #9ea0a9;
+  margin-bottom: 15px;
+}
 
-  #objets{
-    height: 400px;
-  }
+.footer-content .contact-widget {
+  margin-left: 90px;
+}
 
-  @media (max-width: 768px) {
-    #section2,
-    #section3,
-    #section41 {
-      width: 100%;
-    }
-  }
-  
+.footer-content .contact-widget .footer-title {
+  margin-bottom: 29px;
+}
 
+/** footer-bottom **/
+
+.footer-bottom {
+  position: relative;
+  background: #13151a;
+  padding: 25px 0px 22px 0px;
+}
+
+.footer-bottom .copyright,
+.footer-bottom .copyright a,
+.footer-bottom .footer-nav li a {
+  position: relative;
+  color: #9ea0a9;
+}
+
+.footer-bottom .copyright a:hover,
+.footer-bottom .footer-nav li a:hover {
+  color: #ff5e14;
+}
+
+.footer-bottom .footer-nav {
+  position: relative;
+  text-align: right;
+}
+
+.footer-bottom .footer-nav li {
+  position: relative;
+  display: inline-block;
+  margin-left: 29px;
+}
+
+.footer-bottom .footer-nav li:first-child {
+  margin-left: 0px;
+}
+
+.footer-bottom .footer-nav li:before {
+  position: absolute;
+  content: '';
+  background: #9ea0a9;
+  width: 1px;
+  height: 14px;
+  top: 7px;
+  left: -18px;
+}
+
+.footer-bottom .footer-nav li:first-child:before {
+  display: none;
+}
+
+.logo-box img {
+  max-width: 220px;
+}
