--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
-::before,::after, * {
+::before,
+::after,
+* {
   box - box - sizing: border - box;
   padding: 0;
   margin: 0;
@@ -6,84 +8,113 @@
 
 html,
 body {
-  height : 100 %;
+  height: 100 %;
 }
 
 body {
-  background - color : #f0f0f0;
-  display : block;
-  align - items : center;
-  justify - content : center;
+  background - color: #f0f0f0;
+  display: block;
+  align - items: center;
+  justify - content: center;
 }
 
+$primary : #00acc1;
 
-$primary : #00acc1;.map - container {
-  padding : 3.2 rem .8 rem;
-  position : relative;
-  display : inline - block;
-  justify - content : center;
+.map - container {
+  padding: 3.2 rem .8 rem;
+  position: relative;
+  display: inline - block;
+  justify - content: center;
 
   img {
-    width : 80 %;
-  }.point {
-    cursor : pointer;
-    position : absolute;
-    width : 1.6 rem;
-    height : 1.6 rem;
-    background - color : $primary;
-    border - radius : 50 %;
-    transition : all .3 s ease;
-    will - change : transform,
-    box - shadow;
-    transform : translate(-50 %, -50 %);
-    box - shadow : 0 0 0 rgba($primary, 0.4);
-    animation : pulse 3 s infinite;
+    width: 80 %;
+  }
+
+  .point {
+    cursor: pointer;
+    position: absolute;
+    width: 1.6 rem;
+    height: 1.6 rem;
+    background - color: $primary;
+    border - radius: 50 %;
+    transition: all .3 s ease;
+    will - change: transform,
+      box - shadow;
+    transform: translate(-50 %, -50 %);
+    box - shadow: 0 0 0 rgba($primary, 0.4);
+    animation: pulse 3 s infinite;
 
     &:hover {
-      animation : none;
-      transform : translate(-50 %, -50 %)scale3D(1.35, 1.35, 1);
-      box - shadow : 0 3 px 6 px rgba(0, 0, 0, 0.16),
-      0 3 px 6 px rgba(0, 0, 0, 0.23);
+      animation: none;
+      transform: translate(-50 %, -50 %)scale3D(1.35, 1.35, 1);
+      box - shadow: 0 3 px 6 px rgba(0, 0, 0, 0.16),
+        0 3 px 6 px rgba(0, 0, 0, 0.23);
     }
-  }.venezuela {
-    top : 54 %;
-    left : 24 %;
-  }.brasil {
-    top : 64 %;
-    left : 28 %;
-  }.argentina {
-    top : 77 %;
-    left : 27 %;
-  }.colombia {
-    top : 55 %;
-    left : 21 %;
-  }.panama {
-    top : 51 %;
-    left : 18 %;
-  }.mexico {
-    top : 38 %;
-    left : 12 %;
-  }.usa {
-    top : 26 %;
-    left : 17 %;
-  }.arabia {
-    top : 40 %;
-    left : 53 %;
-  }.turquia {
-    top : 31 %;
-    left : 57 %;
-  }.rusia {
-    top : 16 %;
-    left : 67 %;
-  }.china {
-    top : 40 %;
-    left : 72 %;
-  }.japon {
-    top : 34 %;
-    left : 86 %;
-  }.australia {
-    top : 72 %;
-    left : 86 %;
+  }
+
+  .venezuela {
+    top: 54 %;
+    left: 24 %;
+  }
+
+  .brasil {
+    top: 64 %;
+    left: 28 %;
+  }
+
+  .argentina {
+    top: 77 %;
+    left: 27 %;
+  }
+
+  .colombia {
+    top: 55 %;
+    left: 21 %;
+  }
+
+  .panama {
+    top: 51 %;
+    left: 18 %;
+  }
+
+  .mexico {
+    top: 38 %;
+    left: 12 %;
+  }
+
+  .usa {
+    top: 26 %;
+    left: 17 %;
+  }
+
+  .arabia {
+    top: 40 %;
+    left: 53 %;
+  }
+
+  .turquia {
+    top: 31 %;
+    left: 57 %;
+  }
+
+  .rusia {
+    top: 16 %;
+    left: 67 %;
+  }
+
+  .china {
+    top: 40 %;
+    left: 72 %;
+  }
+
+  .japon {
+    top: 34 %;
+    left: 86 %;
+  }
+
+  .australia {
+    top: 72 %;
+    left: 86 %;
   }
 }
 
@@ -101,93 +132,16 @@ $primary : #00acc1;.map - container {
   }
 }
 
-
-#animations - example - 6 {
-  height: 200 px;
-  max - width: 350 px;
-  margin: 0 auto;
-}
-
-#animations - example - 6 td {
-  background - image : linear - gradient(45 deg, #956fd3, #e76ec2, #ff7fa2, #ffa782, #ffd86f, #faf982);
-  background - size : 600 %;
-  animation : gradient - animation 3 s linear infinite alternate;
-}
-
-@keyframes gradient - animation {
-  0 % {
-    background - position: 0 %;
-  }
-
-  100 % {
-    background - position: 100 %;
-  }
-}.navbar {
-  width : 80 %;
-}
-
-#animations - example - 4 {
-  height: 200 px;
-  max - width: 300 px;
-  margin: 0 auto;
-}
-
-#animations - example - 4 tbody td {
-  transform - origin: bottom;
-  animation: revealing - bars 4 s linear infinite;
-}
-
-@keyframes revealing - bars {
-  0 % {
-    transform: scaleY(0);
-  }
-
-  15 % {
-    transform: scaleY(1);
+@media(max - width : 768 px) {
+  .map - container.point {
+    width: 10 px;
+    height: 10 px;
   }
 }
 
-main {
-  display : flex;
-  flex - direction : row;
-  flex - wrap : nowrap;
-  justify - content : space - between;
-  align - items : center;
-  align - content : center;
-}
-
-table {
-  width : 100 %;
-  border - collapse : collapse;
-  border : 1 px solid #000;
-  margin : 0 auto;
-}
-
-#animations - example - 1 {
-  height: 200 px;
-  max - width: 300 px;
-  margin: 0 auto;
-}
-
-#animations - example - 1 td {
-  animation : jumping - bars 3 s linear infinite;
-  animation - delay : 0;
-}
-
-#animations - example - 1 tr : nth - of - type(even)td {
-  animation - delay : 300 ms;
-}
-
-@keyframes jumping - bars {
-  0 % {
-    transform: translateY(0 px);
-  }
-
-  2 % {
-    transform: translateY(-10 px);
-  }
-
-  4 % {
-    transform: translateY(0 px);
+@media(max - width : 576 px) {
+  .map - container.point {
+    width: 5 px;
+    height: 5 px;
   }
 }
